<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="16dp"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner_dark_blue"
        android:orientation="vertical">
        <TextView
            android:id="@+id/loginTextView"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/Login" />

        <TextView
            android:id="@+id/websiteTextView"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/website" />

        <TextView
            android:id="@+id/categoryTextView"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/category" />


        <Button
            android:id="@+id/viewEncryptedPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/round_back_primary_15"
            android:text="@string/lookencpass" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:textColor="@color/white"
            android:background="@drawable/round_back_primary_15"
            android:text="@string/delete" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
