<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".GeneratePasswordActivity">

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:hint="@string/Password"/>
    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:layout_below="@+id/tvPassword"
        android:background="@drawable/round_back_primary_15"
        android:text="@string/btnGenerate"/>
    <Button
        android:id="@+id/btnCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/btnGenerate"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:background="@drawable/round_back_primary_15"
        android:text="@string/copy"/>


</RelativeLayout>