<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/savepassword"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/Login"
        android:maxLines="1"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark_blue5_15"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark_blue5_15"/>
    <EditText
        android:id="@+id/et_wedsite"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/website"
        android:maxLines="1"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark_blue5_15"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Выберите категорию"-->
<!--            android:layout_margin="20dp"-->
<!--            android:layout_marginStart="115dp"/>-->
        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textSize="16sp"
            android:paddingStart="10dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_back_dark_blue5_15"/>
    </RelativeLayout>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/addpassword"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_primary_15"
        android:textColor="@color/white"/>







</LinearLayout>
