<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:src="@drawable/rtccolour"/>

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/LoginToTheApplication"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000"/>

    <EditText
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/Login"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_dark_blue5_15"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/passwordName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:background="@drawable/round_back_dark_blue5_15"/>

        <ImageView
            android:id="@+id/visibility"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/ic_action_visibility"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"/>


    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAuthorization"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/entrance"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_primary_15"
        android:textColor="@color/white"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>